[package]
name = "p2p_internet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = {version = "0.51.1", features = ["tcp", "dns", "tokio", "noise", "mplex", "yamux", "websocket", "ping", "macros"]}
tokio = {version = "1.19.2", features = ["full"]}